# spacemouse_linux

./: .gitignore  Caddyfile  Cargo.toml  install_deps.sh
scripts/: create_cert.sh  install_deps.sh  run_wamp_server.sh
src/: main.rs
test/: flask_server_for_three_js_demo.py  serve_three_js_demo.sh  test_ws_client.py
test/three_js_demo/: 3dconnexion.js  web_threejs.html
